<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_gravity="top"
    android:orientation="vertical">

    
    
    
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|top"
        android:textColor="#66000000"
        android:text="@string/reggo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        >
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"> 

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/fulnem" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fulnem"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10" />


    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:text="@string/fono" />

    <EditText
        android:id="@+id/uphoneno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fonoo"
         android:maxLength="10"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView2"
        android:inputType="phone"
        android:ems="10" />

    
    <TextView
        android:id="@+id/textViewe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uphoneno"
        android:layout_below="@+id/uphoneno"
        android:text="@string/emailad" />

    <EditText
        android:id="@+id/uemailo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailad"
        android:layout_alignLeft="@+id/textViewe"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textViewe"
        android:inputType="textEmailAddress"
        android:ems="10" />


        <TextView
            android:id="@+id/textOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/uemailo"
            android:layout_below="@+id/uemailo"
            android:text="@string/orgaa" />

        <EditText
            android:id="@+id/uorgo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orgaa"
            android:layout_alignLeft="@+id/textOrg"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textOrg"
            android:inputType="text"
            android:ems="10" />


        <TextView
            android:id="@+id/textRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/uorgo"
            android:layout_below="@+id/uorgo"
            android:text="@string/rolee" />

        <EditText
            android:id="@+id/urolo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roleehelp"
            android:layout_alignLeft="@+id/textRole"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textRole"
            android:inputType="text"
            android:ems="10" />




        <TextView
            android:id="@+id/textViewe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/urolo"
            android:layout_below="@+id/urolo"
            android:text="Password" />

        <EditText
            android:id="@+id/upasso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:layout_alignLeft="@+id/textViewe2"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textViewe2"
            android:inputType="textPassword"
            android:ems="10" />


        <TextView
            android:id="@+id/textViewe3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/upasso"
            android:layout_below="@+id/upasso"
            android:text="Repeat Password" />

        <EditText
            android:id="@+id/upasso2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="confirm password"
            android:layout_alignLeft="@+id/textViewe3"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textViewe3"
            android:inputType="textPassword"
            android:ems="10" />

    

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upasso2"
        android:layout_below="@+id/upasso2"
        android:text="@string/countrii" />
    
    <TextView
        android:id="@+id/textView333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/upasso2"
        android:textColor="#000000"
        android:textStyle="bold"
         />


    </RelativeLayout>
    
    </ScrollView>

       <RelativeLayout 
        android:layout_width="match_parent"
           android:layout_marginTop="5dp"
           android:layout_gravity="bottom|center_horizontal"
        android:layout_height="wrap_content"
        >

    
   <!-- <Button
        android:id="@+id/rback"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/comlinee"
        android:text="@string/rback"
        android:textColor="@android:color/background_light" />-->
    
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/comlinee"
        android:layout_margin="10dp"
        android:text="@string/regista"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />
    </RelativeLayout>

    
</LinearLayout>
