<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:paddingBottom="50dp"
    android:background="#FFFFFF"
    android:layout_margin="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="Invasive Species"
        android:textColor="@color/colorThemeTitle"
        android:textStyle="bold"
        android:textSize="17sp" />

    <ScrollView
        android:id="@+id/scrolli"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/nomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Species Name : "
                android:textSize="16sp" />

            <TextView
                android:id="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_toRightOf="@+id/nomi"

                />

            <EditText
                android:id="@+id/s87"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:singleLine="true"
                android:hint="@string/s8a"
                android:layout_below="@+id/s1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/nomi30"
                android:layout_below="@+id/s87"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="Area Estimate"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/s2q"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi30"
                android:layout_marginTop="3dp"
                android:weightSum="1"
                android:layout_alignLeft="@+id/nomi"
                >

                <EditText
                    android:id="@+id/s2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="0.4"
                    android:singleLine="true"
                    android:hint="@string/t4"
                    />

                <Spinner
                    android:id="@+id/s2x"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/t644"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_weight="0.6"
                    android:prompt="@string/tunit" />



            </LinearLayout>


            <TextView
                android:id="@+id/nomi31eq"
                android:layout_below="@+id/s2q"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Comments"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/s7"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/nomi31eq"
                android:background="@drawable/comline"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:padding="4dp"
                android:layout_marginTop="3dp"
                android:layout_margin="1dp"
                android:layout_alignLeft="@+id/nomi"
                android:hint="@string/t16"
                />


            <TextView
                android:id="@+id/nomi12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:layout_below="@+id/s7"
                android:layout_alignLeft="@+id/nomi"
                android:textSize="16sp"
                android:text="Scenario Photograph" />

            <RelativeLayout
                android:id="@+id/profpic"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/nomi12"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s12pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/noimage"
                    android:layout_alignParentLeft="true"
                    />

                <Button
                    android:id="@+id/bfopic"
                    android:layout_width="150dp"
                    android:layout_centerInParent="true"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/comlinee"
                    android:text="Take Photo"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </RelativeLayout>






        </RelativeLayout>
    </ScrollView>




    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backo"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/comlinee"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rback" />

        <Button
            android:id="@+id/doneo"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:background="@drawable/comlinee"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:text="@string/savo" />




    </RelativeLayout>

</LinearLayout>